--- a/app/src/main/res/layout/fragment_vacancy_detail.xml
+++ b/app/src/main/res/layout/fragment_vacancy_detail.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_padding"
