--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimary">#1798af</color>
     <color name="colorPrimaryDark">#0b6171</color>
     <color name="colorAccent">#0b6171</color>
-    <color name="activityBackground">#eaeaea</color>
+    <color name="activityBackground">#f2f2f2</color>
 
     <color name="darkGrayColor">#313131</color>
     <color name="mediumGrayColor">#686868</color>
