--- a/app/src/main/res/layout/item_main_list.xml
+++ b/app/src/main/res/layout/item_main_list.xml
@@ -29,7 +29,7 @@
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/darkGrayColor"
                 android:textSize="18sp"
-                app:typeface="roboto_medium" />
+                app:robotoTypeface="roboto_medium" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/vacancySalary"
@@ -38,7 +38,7 @@
                 android:layout_marginTop="@dimen/default_view_padding"
                 android:textColor="@color/mediumGrayColor"
                 android:textSize="16sp"
-                app:typeface="roboto_medium" />
+                app:robotoTypeface="roboto_medium" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 android:id="@+id/vacancyDesc"
@@ -47,7 +47,7 @@
                 android:layout_marginTop="@dimen/default_view_padding"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
-                app:typeface="roboto_medium" />
+                app:robotoTypeface="roboto_medium" />
 
         </LinearLayout>
 
